@@ -62,6 +62,7 @@ Fixed a problem with the placeholder %betterteams_rank%
 Features: 
 Added admin commands: /teama name <team> <name>, /teama description <team> <description>, /teama open <team>, /teama invite <team> <player>
 /team color is used whenever the players team name is displayed, this can be changed in the config under the option colorTeamName'
+Added a second hologram option to display a balance leaderboard
 
 Improvements:
 Commands and cooldowns only activate if the command is successful
